# nex_os

./: .gitignore  Cargo.toml  Dockerfile  README.md  kernel-riscv64gc-unknown-none-elf.json  kernel.ld  run.sh  rust-toolchain.toml  test.sh  user-riscv64gc-unknown-none-elf.json  user.ld
.cargo/: config.toml
.github/workflows/: rust.yml
kernel/: Cargo.toml  kernel-riscv64gc-unknown-none-elf.json  kernel.ld  loadelf.rs  syscall.rs
kernel/src/: alloc.rs  allocator.rs  boot.rs  console.rs  csr.rs  ksyscall.rs  loadelf.rs  log.rs  main.rs  mem.rs  proc.rs  procv2.rs  timer.rs  trap.rs  utils.rs  vfs.rs
src/: alloc.rs  boot.rs  console.rs  csr.rs  lib.rs  loadelf.rs  main.rs  proc.rs  procv2.rs  syscall.rs  trap.rs  utils.rs  vmem.rs
syscall/: Cargo.toml
syscall/src/: lib.rs
user/: Cargo.toml  ps.rs  sh.rs  sh_cmd.rs  shell.rs  shell_cmd.rs  user-riscv64gc-unknown-none-elf.json  user.ld  user.rs
userlib/: Cargo.toml
userlib/src/: lib.rs
