[package]
name = "nex"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "nex"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "shell"
path = "user/shell.rs"
test = false
bench = false

[dependencies]
zerocopy = {version = "0.7", features = ["derive"]}
