[package]
name = "user"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sh"
path = "sh.rs"
test = false
bench = false

[[bin]]
name = "ps"
path = "ps.rs"
test = false
bench = false

[dependencies]
syscall = { path = "../syscall" }
userlib = { path = "../userlib" }
thiserror = { version = "2", default-features = false } 

[features]
shell-test = []
